--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
       <h1>CV Võ Thiện Khang</h1>
       <img src="AVATAR.jpg" width ="200">
       <a href="https://shopee.vn/">Linkedin Cá nhân</a>
+      <p>đây là tính năng mới</p>
     </body>
 </html>
